--- a/pages/about.html
+++ b/pages/about.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- [Q1. Kamron Richards 01/18/2024] -->
     <title>About Us</title>
   </head>
   <body>
-    <header>
-      <h1>About Us</h1>
-    </header>
-
-    <section>
-      <h2>Our Story</h2>
-      <p>Greatest Web page ever.</p>
-    </section>
-
-    <section>
-      <h2>Team</h2>
+    <!-- Navigation for About page -->
+    <div class="navbar">
       <ul>
-        <li>Kamron Richards</li>
-        <li>Jimmy Reagans</li>
-        <!-- Add more team members as needed -->
+        <a href="index.html"><li>Home</li></a>
+        <a href="statistics.html"><li>Statistics</li></a>
       </ul>
-    </section>
+    </div>
 
-    <footer>
-      <p>&copy; 2024 Kamron Richards. All rights reserved.</p>
-    </footer>
+    <!-- Content for About page -->
   </body>
 </html>
