--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
       <ul>
         <a href="pages/about.html"><li>About</li></a>
-        <a href="pages/contact.html"><li>Contact</li></a>
+        <a href="pages/statistics.html"><li>Statistics</li></a>
         <a href=""><li>Page 3</li></a>
       </ul>
     </div>
