Third page and images

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,8 +8,9 @@
     <!-- Navigation for About page -->
     <div class="navbar">
       <ul>
-        <a href="index.html"><li>Home</li></a>
+        <a href="../index.html"><li>Home</li></a>
         <a href="statistics.html"><li>Statistics</li></a>
+        <a href="hobbies.html"><li>Hobbies</li></a>
       </ul>
     </div>
 
