--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <a href="pages/about.html"><li>About</li></a>
         <a href="pages/statistics.html"><li>Statistics</li></a>
-        <a href=""><li>Page 3</li></a>
+        <a href="pages/hobbies.html"><li>Hobbies</li></a>
       </ul>
     </div>
 
