--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -29,6 +29,7 @@
       <ul>
         <a href="../index.html"><li>Home</li></a>
         <a href="about.html"><li>About</li></a>
+        <a href="hobbies.html"><li>Hobbies</li></a>
       </ul>
     </div>
 
