--- a/pages/about.html
+++ b/pages/about.html
@@ -15,5 +15,17 @@
     </div>
 
     <!-- Content for About page -->
+    <h1>This is me</h1>
+    <div class="about-images">
+      <div class="about">
+        <img
+          src="../img/IS Program photo.JPG"
+          alt="About 1"
+          width="400"
+          height="600"
+        />
+        <p>I am a senior in the Information Systems Program at BYU</p>
+      </div>
+    </div>
   </body>
 </html>
