--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -19,11 +19,11 @@
     <h2>My Hobbies</h2>
     <div class="hobby-images">
       <div class="hobby">
-        <img src="img/golf.jpg" alt="Hobby 1" />
+        <img src="../img/golf.jpg" alt="Hobby 1" width="600" height="400" />
         <p>One of my Favorite hobbies is Golfing</p>
       </div>
       <div class="hobby">
-        <img src="img/gym.jpg" alt="Hobby 2" />
+        <img src="../img/gym.jpg" alt="Hobby 2" width="600" height="400" />
         <p>Another Hobby is the gym</p>
       </div>
       <!-- Add more hobby sections as needed -->
