--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- [Q1. Kamron Richards 01/18/2024] -->
     <!-- [Q2. Change the html title to the topic of your choice] -->
-    <title>Kamrons Webpage!</title>
+    <title>About Kamron Richards!</title>
   </head>
   <body>
     <!-- [Q3. Create a navigation bar that links to two other pages] -->
@@ -14,6 +14,9 @@
         <a href="pages/hobbies.html"><li>Hobbies</li></a>
       </ul>
     </div>
+
+    <h1>This is the Home Page</h1>
+    <h2>Navigate with the links above to learn about Kamron</h2>
 
     <!-- [Q4. Stage and commit your changes up to this point, with an appropriate commit message about the navbar and title. Don't forget to push to GitHub!] -->
     <!-- [Q5-Q10. Follow the instructions in the README.md file to complete them] -->
