--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <a href="pages/about.html"><li>About</li></a>
         <a href="pages/statistics.html"><li>Statistics</li></a>
         <a href="pages/hobbies.html"><li>Hobbies</li></a>
+        <!-- [Q11. Add a link to the new fourth page] -->
+        <a href="pages/form.html"><li>Form</li></a>
       </ul>
     </div>
 
