--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="statistics.html"><li>Statistics</li></a>
         <a href="hobbies.html"><li>Hobbies</li></a>
+        <a href="form.html"><li>Form</li></a>
       </ul>
     </div>
 
