--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -12,6 +12,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="about.html"><li>About</li></a>
         <a href="statistics.html"><li>Statistics</li></a>
+        <a href="form.html"><li>Form</li></a>
       </ul>
     </div>
 
