--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -30,6 +30,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="about.html"><li>About</li></a>
         <a href="hobbies.html"><li>Hobbies</li></a>
+        <a href="form.html"><li>Form</li></a>
       </ul>
     </div>
 
